adding back the bootstrap css

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,7 @@
 
   <link rel="shortcut icon" href="favicon.ico">
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
+  {% stylesheet bootstrap %}
   {% stylesheet main %}
 
   {% javascript modernizr %}
