--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
 
   <link rel="shortcut icon" href="favicon.ico">
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
-  {% stylesheet bootstrap %}
+  {% stylesheet bootstrap.min %}
   {% stylesheet main %}
 
   {% javascript modernizr %}
