--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,10 +16,10 @@
 
   <link rel="shortcut icon" href="favicon.ico">
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
-  {% stylesheet bootstrap.min %}
-  {% stylesheet main %}
+  <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/assets/css/main.css">
 
-  {% javascript modernizr %}
+  <script src="/assets/js/modernizr.min.js"></script>
   <script type="text/javascript">
     var _gaq = _gaq || [];
     _gaq.push(['_setAccount', 'UA-18686147-1']);
@@ -58,8 +58,8 @@
 </footer>
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-<script>window.jQuery || document.write('% javascript jquery-1.9.0 %')</script>
-{% javascript bootstrap %}
-{% javascript script %}"
+<script>window.jQuery || document.write('<script src="/assets/js/jquery-1.9.0.min.js"><\/script>')</script>
+<script src="/assets/js/bootstrap.min.js"></script>
+<script src="/assets/js/script.js"></script>
 </body>
 </html>
