cleaning up the home page

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -54,9 +54,11 @@
 
 </header>
 
+<div id="page">
 <div class="container">
 	{{ content }}
 </div><!--/container-->
+</div><!--/page-->
 
 <footer>
   <div class="container">
