--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,1 +1,55 @@
 /* ========================================================= Main ===*/
+/* ========================================================= Header ===*/
+header{
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 100;
+}
+.navbar{
+  background-color: rgba(35, 35, 38, 0.90);
+  border-radius: 0;
+  margin: 0;
+}
+.nav{
+  margin-top:10px;
+}
+.navbar-nav > li > a{
+  color: #ccc;
+}
+.navbar-nav > li > a:hover{
+  color: #fff;
+}
+/* ========================================================= Home ===*/
+#home #intro{
+  background: #2c3133 url("/assets/img/intro.jpg") center no-repeat;
+  margin: 0 0 20px;
+  padding: 200px 0 0;
+  text-align: center;
+  min-height: 500px;
+}
+#home #intro h2{
+  color: #fff;
+  font-size: 41px;
+  margin: 0 0 10px;
+  text-shadow: 0 1px 3px rgba(0,0,0,0.5);
+}
+#home #intro p{
+  color: #fff;
+  font-size: 20px;
+  margin: 0 0 41px;
+  text-shadow: 0 1px 3px rgba(0,0,0,0.5);
+}
+#home #intro .btn{
+  margin: 0;
+}
+/* ========================================================= Page ===*/
+#page{
+  margin: 90px 0 0 ;
+}
+/* ========================================================= Footer ===*/
+footer{
+  background-color: #232326;
+  color: #fff;
+}
