--- a/assets/css/typography.css
+++ b/assets/css/typography.css
@@ -7,3 +7,10 @@ p{
   font-family: 'Maven Pro', sans-serif;
   font-weight: 400;
 }
+a{
+  -webkit-transition: color .25s ease-in, background .25s ease-in, opacity .25s ease-in;
+  -moz-transition: color .25s ease-in, background .25s ease-in, opacity .25s ease-in;
+  -ms-transition: color .25s ease-in, background .25s ease-in, opacity .25s ease-in;
+  -o-transition: color .25s ease-in, background .25s ease-in, opacity .25s ease-in;
+  transition: color .25s ease-in, background .25s ease-in, opacity .25s ease-in;
+}
