--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,72 +1,8 @@
-<!DOCTYPE html>
-<!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]> <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]> <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
-  <title>{% if page.title %} {{ page.title }} | {% endif %}StartupBus</title>
-  <meta name="description" content="">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-
-  <link rel="shortcut icon" href="favicon.ico">
-  <link rel="apple-touch-icon" href="apple-touch-icon.png">
-  <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Maven+Pro:400,500,700,900' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/assets/css/typography.css">
-  <link rel="stylesheet" href="/assets/css/main.css">
-
-  <script src="/assets/js/modernizr.min.js"></script>
-  <script type="text/javascript">
-    var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-18686147-1']);
-    _gaq.push(['_trackPageview']);
-    (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-    })();
-  </script>
-</head>
-<body>
-
-<header>
-
-
-    <div class="navbar">
-      <div class="container">
-      <a class="navbar-brand" href="/"><img src="/assets/img/logo.png"></a></a>
-      <ul class="nav navbar-nav pull-right">
-        <li><a href="/about">About</a></li>
-        <li><a href="/team">Team</a></li>
-        <li><a href="/blog">Blog</a></li>
-        <li><a href="/apply">Apply</a></li>
-      </ul>
-      </div><!--/container-->
-    </div><!--/navbar-->
-
-
-</header>
+{% include header.html %}
+{% include nav.html %}
 
 <div class="container">
-	{{ content }}
+  {{ content }}
 </div><!--/container-->
 
-<footer>
-  <div class="container">
-    <p>&copy; 2010 - 2013 Silicon Valley Foundry, LLC (doing business as "StartupBus"). All Rights Reserved.</p>
-  </div><!--/container-->
-</footer>
-
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="/assets/js/jquery-1.9.0.min.js"><\/script>')</script>
-<script src="/assets/js/bootstrap.min.js"></script>
-<script src="/assets/js/script.js"></script>
-</body>
-</html>
+{% include footer.html %}
