--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,7 @@
 /* ========================================================= Main ===*/
+html,body{
+  background-color: #f7f7f7;
+}
 /* ========================================================= Header ===*/
 header{
   position: fixed;
@@ -8,23 +11,30 @@ header{
   z-index: 100;
 }
 .navbar{
-  background-color: rgba(35, 35, 38, 0.90);
+  background-color: #fff;
   border-radius: 0;
+  box-shadow: 0 2px 7px rgba(20,24,35,0.3);
   margin: 0;
 }
 .nav{
   margin-top:10px;
 }
 .navbar-nav > li > a{
-  color: #ccc;
+  color: #444;
 }
 .navbar-nav > li > a:hover{
-  color: #fff;
+  color: #222;
+}
+.navbar-toggle{
+  top: 20px;
 }
 /* ========================================================= Home ===*/
+#home{
+  margin: 0 0 60px;
+}
 #home #intro{
-  background: #2c3133 url("/assets/img/intro.jpg") center no-repeat;
-  margin: 0 0 20px;
+  background: #2b3e36 url("/assets/img/intro.jpg") center no-repeat;
+  margin: 0 0 60px;
   padding: 200px 0 0;
   text-align: center;
   min-height: 500px;
@@ -41,15 +51,47 @@ header{
   margin: 0 0 41px;
   text-shadow: 0 1px 3px rgba(0,0,0,0.5);
 }
+#home .col-lg-6 h3{
+  text-align: center;
+}
+#home .col-lg-6 p{
+  font-size: 16px;
+  text-align: center;
+}
+#home .col-lg-6 img{
+  display: block;
+  margin: 0 auto;
+}
+#home hr{
+  margin: 60px 0;
+}
 #home #intro .btn{
   margin: 0;
 }
 /* ========================================================= Page ===*/
 #page{
-  margin: 90px 0 0 ;
+  margin: 100px 0 30px;
+}
+/* ========================================================= Buspreneurs ===*/
+.buspreneurs{
+
+}
+.buspreneurs .thumbnail p{
+  margin: 0;
+  text-align: center;
+}
+.buspreneurs .thumbnail .name{
+  font-size: 18px;
+}
+.buspreneurs .thumbnail .role{
+  color: #ccc;
 }
 /* ========================================================= Footer ===*/
 footer{
-  background-color: #232326;
-  color: #fff;
+  border-top: 1px solid #ccc;
+  color: #ccc;
+  padding: 20px 0;
+}
+footer p{
+  margin: 0;
 }
