--- a/assets/css/typography.css
+++ b/assets/css/typography.css
@@ -1,9 +1,10 @@
 /* ========================================================= Typography ===*/
 h1, h2, h3, h4, h5, h6{
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Open Sans', sans-serif;
   font-weight: 700;
 }
 p{
+  color: #777;
   font-family: 'Maven Pro', sans-serif;
   font-weight: 400;
 }
