--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,10 +9,10 @@
     <a class="navbar-brand" href="/"><img src="/assets/img/logo.png"></a></a>
     <div class="nav-collapse collapse navbar-responsive-collapse">
     <ul class="nav navbar-nav pull-right">
-      <li><a href="/about">About</a></li>
-      <li><a href="/team">Team</a></li>
-      <li><a href="/blog">Blog</a></li>
-      <li><a href="/apply">Apply</a></li>
+      <li><a href="/about/">About</a></li>
+      <li><a href="/team/">Team</a></li>
+      <li><a href="/articles/">Articles</a></li>
+      <li><a href="/apply/">Apply</a></li>
     </ul>
     </div><!-- /.nav-collapse -->
     </div><!--/container-->
