adding a press page

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -11,7 +11,7 @@
     <ul class="nav navbar-nav pull-right">
       <li><a href="/about/">About</a></li>
       <li><a href="/team/">Team</a></li>
-      <li><a href="/articles/">Articles</a></li>
+      <li><a href="/press/">Press</a></li>
       <li><a href="/apply/">Apply</a></li>
     </ul>
     </div><!-- /.nav-collapse -->
