--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,7 @@
 /* ========================================================= Main ===*/
 html,body{
-  background-color: #f7f7f7;
+  background-color: #fff;
+  font-family: 'Open Sans',sans-serif;
 }
 /* ========================================================= Header ===*/
 header{
@@ -52,11 +53,10 @@ header{
   text-shadow: 0 1px 3px rgba(0,0,0,0.5);
 }
 #home .col-lg-6 h3{
-  text-align: center;
+  font-size: 28px;
 }
 #home .col-lg-6 p{
   font-size: 16px;
-  text-align: center;
 }
 #home .col-lg-6 img{
   display: block;
