--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -6,7 +6,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-    <a class="navbar-brand" href="/"><img src="/assets/img/logo.png"></a></a>
+    <a class="navbar-brand" href="/"><img src="/assets/img/logo-full.png"></a></a>
     <div class="nav-collapse collapse navbar-responsive-collapse">
     <ul class="nav navbar-nav pull-right">
       <li><a href="/about/">About</a></li>
