--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12,19 +12,19 @@ header{
   z-index: 100;
 }
 .navbar{
-  background-color: #fff;
+  background-color: #2c3133;
   border-radius: 0;
   box-shadow: 0 2px 7px rgba(20,24,35,0.3);
   margin: 0;
 }
 .nav{
-  margin-top:10px;
+  margin-top:13px;
 }
 .navbar-nav > li > a{
-  color: #444;
+  color: #b1c3ce;
 }
 .navbar-nav > li > a:hover{
-  color: #222;
+  color: #fff;
 }
 .navbar-toggle{
   top: 12px;
