--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -10,7 +10,7 @@
     <div class="nav-collapse collapse navbar-responsive-collapse">
     <ul class="nav navbar-nav pull-right">
       <li><a href="/about/">About</a></li>
-      <li><a href="/team/">Team</a></li>
+      <li><a href="/crew/">Crew</a></li>
       <li><a href="/press/">Press</a></li>
       <li><a href="/apply/">Apply</a></li>
     </ul>
