--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,6 +7,8 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="/assets/js/jquery-1.9.0.min.js"><\/script>')</script>
 <script src="/assets/js/bootstrap.min.js"></script>
+<script src="/assets/js/ss-standard.js"></script>
+<script src="/assets/js/ss-social.js"></script>
 <script src="/assets/js/script.js"></script>
 </body>
 </html>
