--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,6 +17,9 @@
   <link rel="shortcut icon" href="favicon.ico">
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,700,600' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="/assets/css/ss-standard.css">
+  <link rel="stylesheet" href="/assets/css/ss-social-regular.css">
+  <link rel="stylesheet" href="/assets/css/ss-social-circle.css">
   <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="/assets/css/typography.css">
   <link rel="stylesheet" href="/assets/css/main.css">
