--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,6 +22,9 @@ header{
 }
 .navbar-nav > li > a{
   color: #b1c3ce;
+  font-size: 16px;
+  font-weight: 700;
+  text-transform: uppercase;
 }
 .navbar-nav > li > a:hover{
   color: #fff;
@@ -70,7 +73,37 @@ header{
 }
 /* ========================================================= Page ===*/
 #page{
-  margin: 100px 0 30px;
+  margin: 80px 0 30px;
+}
+/* ========================================================= Crew ===*/
+#crew{
+
+}
+#crew img{
+  border-radius: 3px;
+}
+#crew .caption{
+
+}
+#crew .caption p{
+  margin: 0;
+}
+#crew .caption .name{
+  font-size: 18px;
+}
+#crew .caption i{
+  float: right;
+  font-size: 16px;
+  margin: 5px 0 0;
+}
+#crew .caption .role{
+
+}
+#crew .caption .bus{
+
+}
+#crew .caption .twitter{
+
 }
 /* ========================================================= Buspreneurs ===*/
 .buspreneurs{
@@ -94,4 +127,9 @@ footer{
 }
 footer p{
   margin: 0;
+}
+
+table th{
+  background-color: #2c3133;
+  color: #b1c3ce;
 }
