adding more structure to the crew pages

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -10,7 +10,16 @@
     <div class="nav-collapse collapse navbar-responsive-collapse">
     <ul class="nav navbar-nav pull-right">
       <li><a href="/about/">About</a></li>
-      <li><a href="/crew/">Crew</a></li>
+      <li class="dropdown">
+        <a href="/crew/" class="dropdown-toggle" data-toggle="dropdown">Crew<b class="caret"></b></a>
+        <ul class="dropdown-menu">
+          <li><a href="/crew/leadership/">Leadership</a></li>
+          <li><a href="/crew/2014/">2014</a></li>
+          <li><a href="/crew/2013/">2013</a></li>
+          <li><a href="/crew/2012/">2012</a></li>
+          <li><a href="/crew/2011/">2011</a></li>
+        </ul>
+      </li>
       <li><a href="/press/">Press</a></li>
       <li><a href="/apply/">Apply</a></li>
     </ul>
