--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -11,7 +11,7 @@
     <ul class="nav navbar-nav pull-right">
       <li><a href="/about/">About</a></li>
       <li class="dropdown">
-        <a href="/crew/" class="dropdown-toggle" data-toggle="dropdown">Crew<b class="caret"></b></a>
+        <a href="#" data-toggle="dropdown" data-toggle="dropdown">Crew <span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><a href="/crew/leadership/">Leadership</a></li>
           <li><a href="/crew/2014/">2014</a></li>
